presentacion gap fixed

--- a/css/sass/presentation.scss
+++ b/css/sass/presentation.scss
@@ -27,6 +27,7 @@
             display: flex;
             justify-content: center;
             align-items: center;
+            gap: 20px;
             width: 100%;
 
             .container__presentation__text {
