--- a/css/styles.css
+++ b/css/styles.css
@@ -334,6 +334,7 @@ li.active:hover::before {
   display: flex;
   justify-content: center;
   align-items: center;
+  gap: 20px;
   width: 100%;
 }
 .section__presentation .section__presentation__container .container__presentation .container__presentation__text {
